<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="@string/welcome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/user"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_weight="0.8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newlist"
            android:backgroundTint="@color/black"
            android:text="@string/new_list"/>
        <Button
            android:layout_weight="0.9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seemylist"
            android:backgroundTint="#03A9F4"
            android:text="@string/see_my_list"/>
        <Button
            android:layout_weight="1.4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/see_shared_list"
            android:backgroundTint="#0359A4"
            android:text="see shared lists"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/lista"></ListView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:id="@+id/home"
            android:text="HOME"/>
    </LinearLayout>
</LinearLayout>
